idea/testData/multiplatform/duplicateActualsOneWeaklyIncompatible/top/top.kt
// !RENDER_DIAGNOSTICS_MESSAGES

package foo

expect class <!AMBIGUOUS_ACTUALS("Class 'A'; bottom, middle"), LINE_MARKER("descr='Has actuals in common'")!>A<!>